--- a/index.html
+++ b/index.html
@@ -26,14 +26,15 @@
     // ============================
     // 🔥 Firebase config
     // ============================
-    const firebaseConfig = {
-      apiKey: "API_KEY",
-      authDomain: "PROJECT.firebaseapp.com",
-      projectId: "PROJECT",
-      storageBucket: "PROJECT.appspot.com",
-      messagingSenderId: "ID",
-      appId: "APP_ID",
-    };
+   const firebaseConfig = {
+  apiKey: "AIzaSyBmWi-5wQ97PA4TanAC5mHFAqmsNR9aUpE",
+  authDomain: "lista-spesa-famiglia-95127.firebaseapp.com",
+  databaseURL: "https://lista-spesa-famiglia-95127-default-rtdb.europe-west1.firebasedatabase.app",
+  projectId: "lista-spesa-famiglia-95127",
+  storageBucket: "lista-spesa-famiglia-95127.firebasestorage.app",
+  messagingSenderId: "131762886904",
+  appId: "1:131762886904:web:04b14e5c7567c78de9c30d"
+};
 
     const app = firebase.initializeApp(firebaseConfig);
     const db = firebase.firestore();
