--- a/index.html
+++ b/index.html
@@ -1,139 +1,256 @@
 <!DOCTYPE html>
 <html lang="it">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Freezer Inventory</title>
 
-  <!-- Tailwind CDN -->
+  <!-- Tailwind (dev CDN; for production build use Tailwind CLI/PostCSS) -->
   <script src="https://cdn.tailwindcss.com"></script>
 
-  <!-- React -->
-  <script crossorigin src="https://unpkg.com/react@18/umd/react.development.js"></script>
-  <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
+  <!-- React (UMD) -->
+  <script crossorigin src="https://unpkg.com/react@18/umd/react.production.min.js"></script>
+  <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.production.min.js"></script>
 
-  <!-- Firebase -->
-  <script src="https://www.gstatic.com/firebasejs/11.0.2/firebase-app.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/11.0.2/firebase-firestore.js"></script>
+  <!-- Firebase v8 (UMD compat) - works without bundler -->
+  <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-auth.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-firestore.js"></script>
 
-  <!-- Babel -->
-  <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
+  <!-- Small icon set (SVG sprites) -->
+  <style>
+    /* tiny visual tweaks */
+    body { background: #f0f9ff; }
+  </style>
 </head>
-<body class="bg-gray-100 min-h-screen p-4">
-  <div id="root"></div>
+<body class="min-h-screen p-6">
+  <div id="root" class="max-w-4xl mx-auto"></div>
 
-  <script type="text/babel">
-    // ============================
-    // 🔥 Firebase config
-    // ============================
-   const firebaseConfig = {
-  apiKey: "AIzaSyBmWi-5wQ97PA4TanAC5mHFAqmsNR9aUpE",
-  authDomain: "lista-spesa-famiglia-95127.firebaseapp.com",
-  databaseURL: "https://lista-spesa-famiglia-95127-default-rtdb.europe-west1.firebasedatabase.app",
-  projectId: "lista-spesa-famiglia-95127",
-  storageBucket: "lista-spesa-famiglia-95127.firebasestorage.app",
-  messagingSenderId: "131762886904",
-  appId: "1:131762886904:web:04b14e5c7567c78de9c30d"
-};
+  <!-- App (transpiled in browser via Babel) -->
+  <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
+  <script type="text/babel" data-presets="react">
+    const { useState, useEffect, useRef } = React;
 
-    const app = firebase.initializeApp(firebaseConfig);
+    // -------------------------
+    // CONFIG: inserisci le tue credenziali Firebase qui
+    // -------------------------
+    const firebaseConfig = {
+      apiKey: "LA_TUA_API_KEY",
+      authDomain: "IL_TUO_PROJECT.firebaseapp.com",
+      projectId: "IL_TUO_PROJECT",
+      storageBucket: "IL_TUO_PROJECT.appspot.com",
+      messagingSenderId: "ID",
+      appId: "APP_ID"
+    };
+
+    if (!firebase.apps.length) {
+      firebase.initializeApp(firebaseConfig);
+    }
     const db = firebase.firestore();
 
-    // ============================
-    // React App
-    // ============================
-    function App() {
-      const [items, setItems] = React.useState([]);
-      const [nome, setNome] = React.useState("");
-      const [quantita, setQuantita] = React.useState(1);
-      const [categoria, setCategoria] = React.useState("generale");
+    // colore per categoria
+    const CAT_COLORS = {
+      carne: 'bg-red-100 text-red-800',
+      pesce: 'bg-blue-100 text-blue-800',
+      verdure: 'bg-green-100 text-green-800',
+      frutta: 'bg-yellow-100 text-yellow-800',
+      pane: 'bg-amber-100 text-amber-800',
+      pronti: 'bg-violet-100 text-violet-800',
+      altro: 'bg-gray-100 text-gray-800'
+    };
 
-      // Carica dati da Firebase
-      React.useEffect(() => {
-        db.collection("freezer")
-          .orderBy("nome")
-          .onSnapshot(snapshot => {
-            const data = snapshot.docs.map(doc => ({ id: doc.id, ...doc.data() }));
-            setItems(data);
+    // helper per input date -> yyyy-mm-dd
+    const todayISO = () => new Date().toISOString().split('T')[0];
+
+    function App() {
+      const [items, setItems] = useState([]);
+      const [loading, setLoading] = useState(true);
+
+      // form
+      const [form, setForm] = useState({
+        nome: '',
+        quantita: 1,
+        unita: 'pz',
+        categoria: 'altro',
+        addedDate: todayISO(),
+        expiryDate: ''
+      });
+
+      const [editingId, setEditingId] = useState(null);
+      const nameRef = useRef(null);
+
+      // realtime listener
+      useEffect(() => {
+        const unsub = db.collection('freezer')
+          .orderBy('addedDate', 'desc')
+          .onSnapshot(snap => {
+            const arr = snap.docs.map(d => ({ id: d.id, ...d.data() }));
+            setItems(arr);
+            setLoading(false);
+          }, err => {
+            console.error('Firestore read error', err);
+            setLoading(false);
           });
+        return () => unsub();
       }, []);
 
-      // Aggiungi alimento
-      const aggiungi = async () => {
-        if (!nome.trim()) return;
-        await db.collection("freezer").add({ nome, quantita, categoria, ts: Date.now() });
-        setNome("");
-        setQuantita(1);
+      // add or update
+      const saveItem = async (e) => {
+        e && e.preventDefault();
+        if (!form.nome.trim()) return;
+
+        const payload = {
+          nome: form.nome.trim(),
+          quantita: Number(form.quantita) || 1,
+          unita: form.unita || 'pz',
+          categoria: form.categoria || 'altro',
+          addedDate: form.addedDate || todayISO(),
+          expiryDate: form.expiryDate || '',
+          updatedAt: firebase.firestore.FieldValue.serverTimestamp()
+        };
+
+        try {
+          if (editingId) {
+            await db.collection('freezer').doc(editingId).update(payload);
+          } else {
+            await db.collection('freezer').add({ ...payload, createdAt: firebase.firestore.FieldValue.serverTimestamp() });
+          }
+          resetForm();
+        } catch (err) {
+          console.error('save error', err);
+          alert('Errore salvataggio. Controlla console.');
+        }
       };
 
-      // Rimuovi
-      const elimina = async (id) => {
-        await db.collection("freezer").doc(id).delete();
+      const startEdit = (item) => {
+        setEditingId(item.id);
+        setForm({
+          nome: item.nome || '',
+          quantita: item.quantita || 1,
+          unita: item.unita || 'pz',
+          categoria: item.categoria || 'altro',
+          addedDate: item.addedDate || todayISO(),
+          expiryDate: item.expiryDate || ''
+        });
+        setTimeout(() => nameRef.current && nameRef.current.focus(), 50);
       };
+
+      const resetForm = () => {
+        setEditingId(null);
+        setForm({ nome: '', quantita: 1, unita: 'pz', categoria: 'altro', addedDate: todayISO(), expiryDate: '' });
+      };
+
+      const removeItem = async (id) => {
+        if (!confirm('Eliminare questo elemento?')) return;
+        try { await db.collection('freezer').doc(id).delete(); } catch (e) { console.error(e); alert('Errore eliminazione'); }
+      };
+
+      const daysUntilExpiry = (expiry) => {
+        if (!expiry) return null;
+        const diff = Math.ceil((new Date(expiry) - new Date()) / (1000*60*60*24));
+        return diff;
+      };
+
+      const lowStock = (q) => q <= 1;
 
       return (
-        <div className="max-w-xl mx-auto bg-white p-4 rounded-xl shadow">
-          <h1 className="text-2xl font-bold mb-4 text-center">🍗 Freezer Inventory</h1>
+        <div className="bg-white rounded-2xl shadow-lg p-6">
+          <header className="flex items-center justify-between mb-4">
+            <h1 className="text-2xl font-bold">🍽️ Freezer Inventory</h1>
+            <div className="text-sm text-gray-600">{items.length} elementi</div>
+          </header>
 
-          {/* Form */}
-          <div className="flex gap-2 mb-4">
-            <input
-              className="border p-2 flex-1 rounded"
-              placeholder="Alimento"
-              value={nome}
-              onChange={e => setNome(e.target.value)}
+          {/* form */}
+          <form onSubmit={saveItem} className="grid grid-cols-1 md:grid-cols-4 gap-3 mb-4">
+            <input ref={nameRef}
+              className="col-span-1 md:col-span-2 border rounded px-3 py-2"
+              placeholder="Nome prodotto"
+              value={form.nome}
+              onChange={e => setForm({...form, nome: e.target.value})}
+              required
             />
 
-            <input
-              type="number"
-              className="border w-20 p-2 rounded"
-              value={quantita}
-              onChange={e => setQuantita(parseInt(e.target.value))}
-            />
+            <div className="flex gap-2">
+              <input type="number" min="1" className="w-24 border rounded px-3 py-2"
+                value={form.quantita} onChange={e => setForm({...form, quantita: e.target.value})} />
+              <select className="border rounded px-3 py-2" value={form.unita} onChange={e => setForm({...form, unita: e.target.value})}>
+                <option value="pz">pz</option>
+                <option value="kg">kg</option>
+                <option value="g">g</option>
+                <option value="l">l</option>
+                <option value="confezioni">confezioni</option>
+              </select>
+            </div>
 
-            <select
-              className="border p-2 rounded"
-              value={categoria}
-              onChange={e => setCategoria(e.target.value)}
-            >
-              <option value="generale">Generale</option>
+            <select className="border rounded px-3 py-2" value={form.categoria} onChange={e => setForm({...form, categoria: e.target.value})}>
               <option value="carne">Carne</option>
               <option value="pesce">Pesce</option>
               <option value="verdure">Verdure</option>
-              <option value="dolci">Dolci</option>
+              <option value="frutta">Frutta</option>
+              <option value="pane">Pane</option>
+              <option value="pronti">Pronti</option>
+              <option value="altro">Altro</option>
             </select>
 
-            <button
-              onClick={aggiungi}
-              className="bg-blue-600 text-white px-4 rounded"
-            >
-              +
-            </button>
-          </div>
+            <input type="date" className="border rounded px-3 py-2" value={form.expiryDate} onChange={e => setForm({...form, expiryDate: e.target.value})} />
 
-          {/* Lista */}
-          <ul className="divide-y">
-            {items.map(item => (
-              <li key={item.id} className="py-2 flex justify-between items-center">
-                <div>
-                  <span className="font-semibold">{item.nome}</span> —
-                  <span className="ml-1 text-gray-600">{item.quantita}</span>
-                  <span className="ml-2 text-sm bg-gray-200 px-2 py-1 rounded">{item.categoria}</span>
-                </div>
-                <button
-                  onClick={() => elimina(item.id)}
-                  className="text-red-600 font-bold"
-                >
-                  ✕
-                </button>
-              </li>
-            ))}
-          </ul>
+            <div className="md:col-span-4 flex gap-2 mt-1">
+              <button type="submit" className="bg-green-600 text-white px-4 py-2 rounded shadow">
+                {editingId ? 'Salva' : 'Aggiungi'}
+              </button>
+              <button type="button" onClick={resetForm} className="px-4 py-2 border rounded">Annulla</button>
+              {editingId && <div className="ml-auto text-sm text-gray-500 self-center">Modifica elemento</div>}
+            </div>
+          </form>
+
+          {/* list */}
+          {loading ? (
+            <div className="text-center py-8 text-gray-500">Caricamento...</div>
+          ) : items.length === 0 ? (
+            <div className="text-center py-8 text-gray-500">Il tuo freezer è vuoto — aggiungi qualcosa!</div>
+          ) : (
+            <div className="space-y-3">
+              {items.map(item => {
+                const days = daysUntilExpiry(item.expiryDate);
+                const expiryLabel = days === null ? null : (days < 0 ? 'Scaduto' : days === 0 ? 'Scade oggi' : `Scade tra ${days} giorni`);
+                const catClass = CAT_COLORS[item.categoria] || CAT_COLORS['altro'];
+
+                return (
+                  <div key={item.id} className="flex items-center justify-between p-3 border rounded">
+                    <div>
+                      <div className="flex items-center gap-3">
+                        <span className={`px-2 py-1 rounded text-sm font-medium ${catClass}`}>{item.categoria}</span>
+                        <div>
+                          <div className={`font-semibold ${lowStock(item.quantita) ? 'text-red-600' : 'text-gray-800'}`}>{item.nome}</div>
+                          <div className="text-sm text-gray-600">{item.quantita} {item.unita} • Inserito: {item.addedDate || ''}</div>
+                        </div>
+                      </div>
+                    </div>
+
+                    <div className="flex items-center gap-3">
+                      {expiryLabel && <div className={`text-sm ${days < 0 ? 'text-red-600' : days <=7 ? 'text-orange-600' : 'text-gray-600'}`}>{expiryLabel}</div>}
+                      <button onClick={() => startEdit(item)} className="px-3 py-1 border rounded text-sm">Modifica</button>
+                      <button onClick={() => removeItem(item.id)} className="px-3 py-1 border rounded text-sm text-red-600">Elimina</button>
+                    </div>
+                  </div>
+                );
+              })}
+            </div>
+          )}
+
         </div>
       );
     }
 
-    ReactDOM.createRoot(document.getElementById("root")).render(<App />);
+    // root render
+    ReactDOM.createRoot(document.getElementById('root')).render(<div className="max-w-4xl mx-auto"><App/></div>);
   </script>
+
+  <!-- small usage note -->
+  <!--
+    * Sostituisci i campi in firebaseConfig con i valori del tuo progetto Firebase.
+    * Usa Firestore (regole di lettura/scrittura) appropriate per la sicurezza.
+    * Per la produzione: build con Tailwind CLI/PostCSS e precompila React (non usare Babel in browser).
+  -->
 </body>
 </html>
