--- a/index.html
+++ b/index.html
@@ -1,117 +1,328 @@
 <!DOCTYPE html>
 <html lang="it">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Lista Spesa</title>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>Freezer Inventory — Glass Night</title>
 
-  <!-- Tailwind -->
+  <!-- Tailwind (dev CDN) -->
   <script src="https://cdn.tailwindcss.com"></script>
 
-  <!-- Firebase -->
-  <script type="module">
-    import { initializeApp } from "https://www.gstatic.com/firebasejs/11.0.2/firebase-app.js";
-    import {
-      getFirestore,
-      collection,
-      getDocs,
-      addDoc,
-      deleteDoc,
-      doc
-    } from "https://www.gstatic.com/firebasejs/11.0.2/firebase-firestore.js";
+  <!-- React (UMD) -->
+  <script crossorigin src="https://unpkg.com/react@18/umd/react.production.min.js"></script>
+  <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.production.min.js"></script>
 
-    const firebaseConfig = {
-  apiKey: "AIzaSyBmWi-5wQ97PA4TanAC5mHFAqmsNR9aUpE",
-  authDomain: "lista-spesa-famiglia-95127.firebaseapp.com",
-  databaseURL: "https://lista-spesa-famiglia-95127-default-rtdb.europe-west1.firebasedatabase.app",
-  projectId: "lista-spesa-famiglia-95127",
-  storageBucket: "lista-spesa-famiglia-95127.firebasestorage.app",
-  messagingSenderId: "131762886904",
-  appId: "1:131762886904:web:04b14e5c7567c78de9c30d"
-};
+  <!-- Firebase v8 (UMD compat) -->
+  <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-auth.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-firestore.js"></script>
 
+  <!-- Babel for in-browser JSX (OK for development / GitHub Pages demo) -->
+  <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
 
-    const app = initializeApp(firebaseConfig);
-    const db = getFirestore(app);
-
-    async function loadList() {
-      const listRef = collection(db, "listaSpesa");
-      const snapshot = await getDocs(listRef);
-
-      const container = document.getElementById("items");
-      container.innerHTML = "";
-
-      snapshot.forEach(docItem => {
-        const data = docItem.data();
-
-        const row = document.createElement("div");
-        row.className =
-          "flex justify-between items-center p-3 rounded-xl bg-white dark:bg-gray-800 shadow-sm border border-gray-200 dark:border-gray-700";
-
-        row.innerHTML = `
-          <span class="text-gray-800 dark:text-gray-200 font-medium">${data.nome}</span>
-          <button class="px-3 py-1 rounded-lg bg-red-500 text-white hover:bg-red-600 transition"
-            onclick="deleteItem('${docItem.id}')">
-            Elimina
-          </button>
-        `;
-
-        container.appendChild(row);
-      });
+  <style>
+    /* Glassmorphism + night theme */
+    :root{
+      --bg-1: #071020;
+      --bg-2: #0c2236;
+      --card-bg: rgba(255,255,255,0.06);
+      --card-border: rgba(255,255,255,0.08);
+      --glass-blur: 24px;
+      --accent: #7dd3fc;
+      --accent-2: #b794f4;
     }
 
-    async function addItem() {
-      const input = document.getElementById("item");
-      const nome = input.value.trim();
-
-      if (!nome) return;
-
-      await addDoc(collection(db, "listaSpesa"), { nome });
-      input.value = "";
-      loadList();
+    body {
+      background: linear-gradient(180deg, var(--bg-1) 0%, var(--bg-2) 100%);
+      font-family: Inter, ui-sans-serif, system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial;
+      -webkit-font-smoothing:antialiased;
+      -moz-osx-font-smoothing:grayscale;
+      color: #E6F0FF;
     }
 
-    async function deleteItem(id) {
-      await deleteDoc(doc(db, "listaSpesa", id));
-      loadList();
+    .glass {
+      background: var(--card-bg);
+      border: 1px solid var(--card-border);
+      backdrop-filter: blur(var(--glass-blur));
+      -webkit-backdrop-filter: blur(var(--glass-blur));
     }
 
-    window.addItem = addItem;
-    window.deleteItem = deleteItem;
+    .neon {
+      box-shadow: 0 6px 18px rgba(125,211,252,0.06), 0 0 18px rgba(125,211,252,0.04) inset;
+    }
 
-    window.onload = loadList;
-  </script>
+    .soft-glow {
+      transition: box-shadow .18s ease, transform .12s ease;
+    }
+    .soft-glow:hover { transform: translateY(-2px); box-shadow: 0 8px 30px rgba(125,211,252,0.08); }
 
+    /* small pill tags */
+    .pill {
+      padding: 0.25rem 0.6rem;
+      border-radius: 999px;
+      font-weight: 600;
+      font-size: 0.78rem;
+      display: inline-flex;
+      align-items: center;
+      gap: 0.4rem;
+    }
+
+    /* subtle input focus */
+    input:focus, select:focus, textarea:focus {
+      outline: none;
+      box-shadow: 0 0 0 4px rgba(125,211,252,0.06);
+      border-color: rgba(125,211,252,0.24);
+    }
+
+    /* scrollbar small */
+    ::-webkit-scrollbar { height:8px; width:8px; }
+    ::-webkit-scrollbar-thumb { background: rgba(255,255,255,0.06); border-radius: 8px; }
+  </style>
 </head>
+<body class="min-h-screen py-8">
+  <div id="root" class="max-w-3xl mx-auto px-4"></div>
 
-<body class="bg-gray-100 dark:bg-gray-900 min-h-screen p-6">
-  <div class="max-w-lg mx-auto">
+  <script type="text/babel" data-presets="react">
+    const { useState, useEffect, useRef } = React;
 
-    <h1 class="text-3xl font-bold text-center text-gray-800 dark:text-gray-100 mb-6">
-      Lista della Spesa 🛒
-    </h1>
+    /* ==========================
+       FIREBASE CONFIG - EDITA QUI
+       ========================== */
+    const firebaseConfig = {
+      apiKey: "AIzaSyBmWi-5wQ97PA4TanAC5mHFAqmsNR9aUpE",
+      authDomain: "lista-spesa-famiglia-95127.firebaseapp.com",
+      databaseURL: "https://lista-spesa-famiglia-95127-default-rtdb.europe-west1.firebasedatabase.app",
+      projectId: "lista-spesa-famiglia-95127",
+      storageBucket: "lista-spesa-famiglia-95127.firebasestorage.app",
+      messagingSenderId: "131762886904",
+      appId: "1:131762886904:web:04b14e5c7567c78de9c30d"
+    };
 
-    <!-- FORM -->
-    <div class="bg-white dark:bg-gray-800 shadow-lg p-5 rounded-2xl border border-gray-200 dark:border-gray-700 mb-6">
-      <label class="block mb-2 font-medium text-gray-700 dark:text-gray-300">
-        Aggiungi prodotto
-      </label>
+    if (!firebase.apps.length) {
+      firebase.initializeApp(firebaseConfig);
+    }
+    const db = firebase.firestore();
 
-      <div class="flex gap-2">
-        <input id="item"
-          class="flex-1 p-3 rounded-xl border border-gray-300 dark:border-gray-600 dark:bg-gray-700 dark:text-white"
-          placeholder="Es. Pane, latte, uova..." />
+    /* Category colors (pill styles) */
+    const CAT = {
+      carne: { bg: 'rgba(248,113,113,0.12)', color: '#fecaca' },    // soft red
+      pesce: { bg: 'rgba(119,199,255,0.12)', color: '#bfdbfe' },    // soft blue
+      verdure: { bg: 'rgba(110,231,183,0.08)', color: '#bbf7d0' },  // mint
+      frutta: { bg: 'rgba(250,204,21,0.08)', color: '#fef08a' },    // yellow
+      pane: { bg: 'rgba(250,215,131,0.08)', color: '#fef3c7' },     // amber
+      pronti: { bg: 'rgba(174,153,255,0.08)', color: '#e9d5ff' },   // violet
+      altro: { bg: 'rgba(255,255,255,0.04)', color: '#d1d5db' }     // gray
+    };
 
-        <button onclick="addItem()"
-          class="px-4 py-3 rounded-xl bg-blue-600 text-white font-medium hover:bg-blue-700 transition">
-          Aggiungi
-        </button>
-      </div>
-    </div>
+    const todayISO = () => new Date().toISOString().split('T')[0];
 
-    <!-- LISTA -->
-    <div id="items" class="flex flex-col gap-3"></div>
+    function IconPlus({className='w-4 h-4'}) {
+      return (<svg className={className} viewBox="0 0 24 24" fill="none" aria-hidden><path stroke="currentColor" strokeWidth="2" strokeLinecap="round" strokeLinejoin="round" d="M12 5v14M5 12h14"/></svg>);
+    }
+    function IconTrash({className='w-4 h-4'}) {
+      return (<svg className={className} viewBox="0 0 24 24" fill="none" aria-hidden><path stroke="currentColor" strokeWidth="1.6" strokeLinecap="round" strokeLinejoin="round" d="M3 6h18M8 6v12a2 2 0 002 2h4a2 2 0 002-2V6M10 6V4h4v2"/></svg>);
+    }
+    function IconEdit({className='w-4 h-4'}) {
+      return (<svg className={className} viewBox="0 0 24 24" fill="none" aria-hidden><path stroke="currentColor" strokeWidth="1.6" strokeLinecap="round" strokeLinejoin="round" d="M3 21v-3l11-11 3 3L6 21H3zM14 6l3 3"/></svg>);
+    }
 
-  </div>
+    function App(){
+      const [items, setItems] = useState([]);
+      const [loading, setLoading] = useState(true);
+
+      const [form, setForm] = useState({
+        nome: '', quantita: 1, unita: 'pz', categoria: 'altro', addedDate: todayISO(), expiryDate: ''
+      });
+      const [editingId, setEditingId] = useState(null);
+      const nameRef = useRef(null);
+
+      // realtime snapshot
+      useEffect(() => {
+        const unsub = db.collection('freezer').orderBy('createdAt','desc')
+          .onSnapshot(snap=>{
+            const arr = snap.docs.map(d=>({ id: d.id, ...d.data() }));
+            setItems(arr);
+            setLoading(false);
+          }, err => {
+            console.error('Firestore read error', err);
+            setLoading(false);
+          });
+        return ()=> unsub();
+      }, []);
+
+      const resetForm = () => {
+        setEditingId(null);
+        setForm({ nome:'', quantita:1, unita:'pz', categoria:'altro', addedDate: todayISO(), expiryDate:'' });
+      };
+
+      const saveItem = async (e) => {
+        e && e.preventDefault();
+        if (!form.nome.trim()) return;
+        const payload = {
+          nome: form.nome.trim(),
+          quantita: Number(form.quantita) || 1,
+          unita: form.unita || 'pz',
+          categoria: form.categoria || 'altro',
+          addedDate: form.addedDate || todayISO(),
+          expiryDate: form.expiryDate || '',
+          updatedAt: firebase.firestore.FieldValue.serverTimestamp()
+        };
+        try {
+          if (editingId) {
+            await db.collection('freezer').doc(editingId).update(payload);
+          } else {
+            await db.collection('freezer').add({...payload, createdAt: firebase.firestore.FieldValue.serverTimestamp()});
+          }
+          resetForm();
+        } catch(err) {
+          console.error('save error', err);
+          alert('Errore salvataggio (vedi console).');
+        }
+      };
+
+      const startEdit = (it) => {
+        setEditingId(it.id);
+        setForm({
+          nome: it.nome || '', quantita: it.quantita||1, unita: it.unita||'pz',
+          categoria: it.categoria||'altro', addedDate: it.addedDate||todayISO(), expiryDate: it.expiryDate||''
+        });
+        setTimeout(()=> nameRef.current && nameRef.current.focus(),40);
+      };
+
+      const removeItem = async (id) => {
+        if (!confirm('Eliminare questo elemento?')) return;
+        try { await db.collection('freezer').doc(id).delete(); } catch(e){ console.error(e); alert('Errore eliminazione'); }
+      };
+
+      const daysUntilExpiry = (expiry) => {
+        if (!expiry) return null;
+        return Math.ceil((new Date(expiry) - new Date())/(1000*60*60*24));
+      };
+
+      const lowStock = q => Number(q) <= 1;
+
+      return (
+        <div className="glass neon soft-glow p-6 rounded-2xl">
+          <div className="flex items-start justify-between gap-4 mb-4">
+            <div>
+              <h2 className="text-2xl font-semibold">🍽️ Freezer Inventory</h2>
+              <p className="text-sm text-slate-300 mt-1">Gestisci velocemente ciò che c'è nel freezer — elegante e veloce.</p>
+              <div className="mt-2 text-xs text-slate-400">{items.length} elementi</div>
+            </div>
+            <div className="text-right">
+              <div className="text-xs text-slate-400">Tema</div>
+              <div className="mt-1 inline-flex items-center gap-1 px-3 py-1 rounded-full text-xs bg-black/20 border border-white/6">
+                <span style={{width:10,height:10,background:'#5eead4',borderRadius:6,boxShadow:'0 2px 8px rgba(93,234,212,0.12)'}}></span>
+                <span style={{width:10,height:10,background:'#a78bfa',borderRadius:6,boxShadow:'0 2px 8px rgba(167,139,250,0.12)'}}></span>
+              </div>
+            </div>
+          </div>
+
+          {/* Form single-column responsive */}
+          <form onSubmit={saveItem} className="grid grid-cols-1 gap-3 mb-4">
+            <input
+              ref={nameRef}
+              value={form.nome}
+              onChange={e=> setForm({...form, nome: e.target.value})}
+              placeholder="Nome prodotto (es. Pollo a pezzi)"
+              className="w-full px-4 py-3 rounded-xl bg-white/3 border border-white/6 text-white placeholder-slate-300"
+              required
+            />
+
+            <div className="flex gap-2">
+              <input type="number" min="1"
+                value={form.quantita}
+                onChange={e=> setForm({...form, quantita: e.target.value})}
+                className="w-28 px-3 py-2 rounded-xl bg-white/3 border border-white/6 text-white"
+              />
+              <select value={form.unita} onChange={e=> setForm({...form, unita: e.target.value})}
+                className="px-3 py-2 rounded-xl bg-white/3 border border-white/6 text-white">
+                <option value="pz">pz</option>
+                <option value="kg">kg</option>
+                <option value="g">g</option>
+                <option value="l">l</option>
+                <option value="confezioni">confezioni</option>
+              </select>
+
+              <select value={form.categoria} onChange={e=> setForm({...form, categoria: e.target.value})}
+                className="ml-auto px-3 py-2 rounded-xl bg-white/3 border border-white/6 text-white">
+                <option value="carne">Carne</option>
+                <option value="pesce">Pesce</option>
+                <option value="verdure">Verdure</option>
+                <option value="frutta">Frutta</option>
+                <option value="pane">Pane</option>
+                <option value="pronti">Pronti</option>
+                <option value="altro">Altro</option>
+              </select>
+            </div>
+
+            <div className="flex gap-2">
+              <input type="date" value={form.expiryDate} onChange={e=> setForm({...form, expiryDate: e.target.value})}
+                className="px-3 py-2 rounded-xl bg-white/3 border border-white/6 text-white" />
+              <button type="submit" className="ml-auto inline-flex items-center gap-2 px-4 py-2 rounded-xl bg-gradient-to-r from-[#60a5fa] to-[#8b5cf6] text-white font-semibold shadow hover:brightness-105">
+                <IconPlus className="w-4 h-4"/> {editingId ? 'Salva' : 'Aggiungi'}
+              </button>
+              <button type="button" onClick={resetForm} className="px-3 py-2 rounded-xl border border-white/6 text-slate-200 hover:bg-white/2">
+                Annulla
+              </button>
+            </div>
+          </form>
+
+          {/* List */}
+          <div>
+            {loading ? (
+              <div className="py-8 text-center text-slate-400">Caricamento…</div>
+            ) : items.length === 0 ? (
+              <div className="py-8 text-center text-slate-400">Il freezer è vuoto — aggiungi il primo prodotto</div>
+            ) : (
+              <div className="space-y-3">
+                {items.map(item=>{
+                  const days = daysUntilExpiry(item.expiryDate);
+                  const expiryLabel = days === null ? null : (days < 0 ? 'Scaduto' : days === 0 ? 'Scade oggi' : `Scade tra ${days} giorni`);
+                  const cat = CAT[item.categoria] || CAT['altro'];
+
+                  return (
+                    <div key={item.id} className="flex items-center justify-between p-3 rounded-xl border border-white/6 bg-white/2">
+                      <div className="flex items-center gap-3">
+                        <div style={{background: cat.bg, color: cat.color}} className="pill" title={item.categoria}>
+                          {item.categoria}
+                        </div>
+                        <div>
+                          <div className={`text-white font-semibold ${lowStock(item.quantita) ? 'text-rose-300' : ''}`}>{item.nome}</div>
+                          <div className="text-xs text-slate-300">{item.quantita} {item.unita} • Inserito: {item.addedDate || ''}</div>
+                        </div>
+                      </div>
+
+                      <div className="flex items-center gap-2">
+                        {expiryLabel && <div className={`text-xs ${days<0 ? 'text-rose-400' : days<=7 ? 'text-amber-300' : 'text-slate-300'}`}>{expiryLabel}</div>}
+                        <button onClick={()=> startEdit(item)} className="px-3 py-1 rounded-lg border border-white/6 text-slate-200 hover:bg-white/3 flex items-center gap-2">
+                          <IconEdit/> Modifica
+                        </button>
+                        <button onClick={()=> removeItem(item.id)} className="px-3 py-1 rounded-lg border border-white/6 text-rose-300 hover:bg-rose-900/10 flex items-center gap-2">
+                          <IconTrash/> Elimina
+                        </button>
+                      </div>
+                    </div>
+                  );
+                })}
+              </div>
+            )}
+          </div>
+
+          <footer className="mt-6 text-xs text-slate-400">
+            <div>⚠️ Nota: per produzione compila Tailwind con CLI / PostCSS e rimuovi Babel in-browser.</div>
+          </footer>
+        </div>
+      );
+    }
+
+    function daysUntilExpiry(expiry) {
+      if (!expiry) return null;
+      return Math.ceil((new Date(expiry) - new Date())/(1000*60*60*24));
+    }
+    function lowStock(q){ return Number(q) <= 1; }
+
+    ReactDOM.createRoot(document.getElementById('root')).render(<div className="mx-auto max-w-3xl px-4"><App/></div>);
+  </script>
 </body>
 </html>
